# desktop-file-creator

./: .desktop  Cargo.toml  build.rs
resources/: data.gresource.xml  filters.blp  filters.ui  window.blp  window.ui
src/: dialogs.rs  main.rs  window.rs
