[package]
name = "desktop-file-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
gtk = { version = "0.6.6", package = "gtk4", features=["v4_10"] }
libadwaita = { version = "0.4.4", features = ["v1_2"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_ini = "0.2.0"

[build-dependencies]
glib-build-tools = "0.17.10"
